--- a/index.html
+++ b/index.html
@@ -39,6 +39,44 @@
     }
     </script>
 
+    <!-- Dify Chatbot Configuration -->
+    <script>
+      window.difyChatbotConfig = {
+        token: 'WPDYiBDGU4MKTRLM',
+        inputs: {
+          // You can define the inputs from the Start node here
+          // key is the variable name
+          // e.g.
+          // name: "NAME"
+        },
+        systemVariables: {
+          // user_id: 'YOU CAN DEFINE USER ID HERE',
+          // conversation_id: 'YOU CAN DEFINE CONVERSATION ID HERE, IT MUST BE A VALID UUID',
+        },
+        userVariables: {
+          // avatar_url: 'YOU CAN DEFINE USER AVATAR URL HERE',
+          // name: 'YOU CAN DEFINE USER NAME HERE',
+        },
+      }
+    </script>
+    <script
+      src="https://udify.app/embed.min.js"
+      id="WPDYiBDGU4MKTRLM"
+      defer>
+    </script>
+
+    <!-- Dify Chatbot Custom Styles -->
+    <style>
+      #dify-chatbot-bubble-button {
+        background-color: #1C64F2 !important;
+      }
+
+      #dify-chatbot-bubble-window {
+        width: 24rem !important;
+        height: 40rem !important;
+      }
+    </style>
+
   </head>
   <body>
     <div id="root"></div>
