Add purple P favicon (#8B5CF6) to portfolio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pratibha Yadav - Product Manager Portfolio</title>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.svg" />
+    
     <meta name="description" content="Product Manager with 3 years of experience driving user-focused solutions through market research, data insights, and cross-functional execution at Reliance Jio" />
     <meta name="author" content="Pratibha Yadav" />
 
